@@ -8,16 +8,20 @@ import org.booklore.app.dto.AppAuthorSummary;
 import org.booklore.app.dto.AppPageResponse;
 import org.booklore.model.dto.BookLoreUser;
 import org.booklore.model.dto.Library;
-import org.booklore.model.entity.AuthorEntity;
+import org.booklore.model.entity.*;
 import org.booklore.repository.AuthorRepository;
 import org.booklore.util.FileService;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.Tuple;
+import jakarta.persistence.TypedQuery;
+import jakarta.persistence.criteria.*;
+import org.booklore.app.specification.AppAuthorSpecification;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.TypedQuery;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -51,57 +55,73 @@ public class AppAuthorService {
         int pageNum = page != null && page >= 0 ? page : 0;
         int pageSize = size != null && size > 0 ? Math.min(size, MAX_PAGE_SIZE) : DEFAULT_PAGE_SIZE;
 
-        StringBuilder whereClause = new StringBuilder(" WHERE (1=1)");
-        buildLibraryFilter(whereClause, accessibleLibraryIds, libraryId);
-        buildSearchFilter(whereClause, search);
+        Specification<AuthorEntity> spec = buildSpecification(accessibleLibraryIds, libraryId, search, hasPhoto);
 
-        String fromClause = " FROM AuthorEntity a LEFT JOIN a.bookMetadataEntityList bm LEFT JOIN bm.book b";
+        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
 
         // Count query
-        String countJpql = "SELECT COUNT(DISTINCT a.id)" + fromClause + whereClause;
-        TypedQuery<Long> countQuery = entityManager.createQuery(countJpql, Long.class);
-        setQueryParams(countQuery, accessibleLibraryIds, libraryId, search);
-        long totalElements = countQuery.getSingleResult();
+        CriteriaQuery<Long> countCq = cb.createQuery(Long.class);
+        Root<AuthorEntity> countRoot = countCq.from(AuthorEntity.class);
+        countCq.select(cb.countDistinct(countRoot.get(AuthorEntity_.id)));
+        countCq.where(spec.toPredicate(countRoot, countCq, cb));
+        
+        long totalElements = entityManager.createQuery(countCq).getSingleResult();
 
         if (totalElements == 0) {
             return AppPageResponse.of(Collections.emptyList(), pageNum, pageSize, 0L);
         }
 
-        // Data query with book count
-        String orderClause = buildOrderClause(sortBy, sortDir);
-        String dataJpql = "SELECT a, COUNT(DISTINCT bm.id)" + fromClause + whereClause
-                + " GROUP BY a" + orderClause;
-        TypedQuery<Object[]> dataQuery = entityManager.createQuery(dataJpql, Object[].class);
-        setQueryParams(dataQuery, accessibleLibraryIds, libraryId, search);
+        // Data query with book count using Tuple for DTO projection
+        CriteriaQuery<Tuple> dataCq = cb.createTupleQuery();
+        Root<AuthorEntity> dataRoot = dataCq.from(AuthorEntity.class);
+        
+        // Pass the effective library filter for book count
+        Collection<Long> countLibraryIds = libraryId != null ? List.of(libraryId) : accessibleLibraryIds;
+        Expression<Long> bookCount = AppAuthorSpecification.bookCount(dataRoot, cb, countLibraryIds);
+
+        dataCq.multiselect(
+            dataRoot.get(AuthorEntity_.id).alias("id"),
+            dataRoot.get(AuthorEntity_.name).alias("name"),
+            dataRoot.get(AuthorEntity_.asin).alias("asin"),
+            dataRoot.get(AuthorEntity_.hasPhoto).alias("hasPhoto"),
+            bookCount.alias("bookCount")
+        );
+        dataCq.where(spec.toPredicate(dataRoot, dataCq, cb));
+        dataCq.groupBy(dataRoot);
+
+        String normalizedSort = sortBy == null ? "" : sortBy.toLowerCase();
+        boolean primaryIsId = switch (normalizedSort) {
+            case "recent", "id" -> true;
+            default -> false;
+        };
+        Expression<?> sortExpr = switch (normalizedSort) {
+            case "bookcount", "book_count" -> bookCount;
+            case "recent", "id" -> dataRoot.get(AuthorEntity_.id);
+            default -> dataRoot.get(AuthorEntity_.name);
+        };
+
+        Order primary = "asc".equalsIgnoreCase(sortDir) ? cb.asc(sortExpr) : cb.desc(sortExpr);
+        if (primaryIsId) {
+            dataCq.orderBy(primary);
+        } else {
+            dataCq.orderBy(primary, cb.asc(dataRoot.get(AuthorEntity_.id)));
+        }
+
+        TypedQuery<Tuple> dataQuery = entityManager.createQuery(dataCq);
         dataQuery.setFirstResult(pageNum * pageSize);
         dataQuery.setMaxResults(pageSize);
 
-        List<Object[]> results = dataQuery.getResultList();
+        List<Tuple> results = dataQuery.getResultList();
 
         List<AppAuthorSummary> summaries = results.stream()
-                .map(row -> {
-                    AuthorEntity author = (AuthorEntity) row[0];
-                    long bookCount = (Long) row[1];
-                    boolean authorHasPhoto = Files.exists(Paths.get(fileService.getAuthorThumbnailFile(author.getId())));
-                    return AppAuthorSummary.builder()
-                            .id(author.getId())
-                            .name(author.getName())
-                            .asin(author.getAsin())
-                            .bookCount((int) bookCount)
-                            .hasPhoto(authorHasPhoto)
-                            .build();
-                })
-                .collect(Collectors.toList());
-
-        // Post-filter by hasPhoto if requested
-        if (hasPhoto != null) {
-            summaries = summaries.stream()
-                    .filter(s -> s.isHasPhoto() == hasPhoto)
-                    .collect(Collectors.toList());
-            // Adjust total count for hasPhoto filter — requires a separate count
-            long filteredTotal = countAuthorsWithPhotoFilter(accessibleLibraryIds, libraryId, search, hasPhoto);
-            return AppPageResponse.of(summaries, pageNum, pageSize, filteredTotal);
-        }
+                .map(tuple -> AppAuthorSummary.builder()
+                        .id(tuple.get("id", Long.class))
+                        .name(tuple.get("name", String.class))
+                        .asin(tuple.get("asin", String.class))
+                        .bookCount(tuple.get("bookCount", Long.class).intValue())
+                        .hasPhoto(tuple.get("hasPhoto", Boolean.class))
+                        .build())
+                .toList();
 
         return AppPageResponse.of(summaries, pageNum, pageSize, totalElements);
     }
@@ -123,7 +143,6 @@ public class AppAuthorService {
 
         // Count books accessible to this user
         int bookCount = countAccessibleBooks(authorId, accessibleLibraryIds);
-        boolean authorHasPhoto = Files.exists(Paths.get(fileService.getAuthorThumbnailFile(author.getId())));
 
         return AppAuthorDetail.builder()
                 .id(author.getId())
@@ -131,79 +150,60 @@ public class AppAuthorService {
                 .description(author.getDescription())
                 .asin(author.getAsin())
                 .bookCount(bookCount)
-                .hasPhoto(authorHasPhoto)
+                .hasPhoto(author.isHasPhoto())
                 .build();
     }
 
     private int countAccessibleBooks(Long authorId, Set<Long> accessibleLibraryIds) {
-        StringBuilder jpql = new StringBuilder(
-                "SELECT COUNT(DISTINCT bm.id) FROM AuthorEntity a JOIN a.bookMetadataEntityList bm JOIN bm.book b"
-                        + " WHERE a.id = :authorId AND (b.deleted IS NULL OR b.deleted = false)"
-                        + " AND b.bookFiles IS NOT EMPTY");
+        if (accessibleLibraryIds != null && accessibleLibraryIds.isEmpty()) {
+            return 0;
+        }
+
+        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
+        CriteriaQuery<Long> cq = cb.createQuery(Long.class);
+        Root<AuthorEntity> author = cq.from(AuthorEntity.class);
+
+        Join<AuthorEntity, BookMetadataEntity> metadata = author.join(AuthorEntity_.bookMetadataEntityList);
+        Join<BookMetadataEntity, BookEntity> book = metadata.join(BookMetadataEntity_.book);
+
+        cq.select(cb.countDistinct(metadata.get(BookMetadataEntity_.bookId)));
+
+        List<Predicate> predicates = new ArrayList<>();
+        predicates.add(cb.equal(author.get(AuthorEntity_.id), authorId));
+        predicates.add(cb.or(
+                cb.isNull(book.get(BookEntity_.deleted)),
+                cb.equal(book.get(BookEntity_.deleted), false)
+        ));
+        predicates.add(cb.isNotEmpty(book.get(BookEntity_.bookFiles)));
+
         if (accessibleLibraryIds != null) {
-            jpql.append(" AND b.library.id IN :libraryIds");
+            predicates.add(book.get(BookEntity_.library).get(LibraryEntity_.id).in(accessibleLibraryIds));
         }
-        TypedQuery<Long> query = entityManager.createQuery(jpql.toString(), Long.class);
-        query.setParameter("authorId", authorId);
-        if (accessibleLibraryIds != null) {
-            query.setParameter("libraryIds", accessibleLibraryIds);
-        }
-        return query.getSingleResult().intValue();
+
+        cq.where(predicates.toArray(new Predicate[0]));
+
+        return entityManager.createQuery(cq).getSingleResult().intValue();
     }
 
-    private long countAuthorsWithPhotoFilter(Set<Long> accessibleLibraryIds, Long libraryId, String search, boolean hasPhoto) {
-        // Since hasPhoto is file-system based, we need to count all matching authors
-        // and check their photos. For large datasets this could be optimized with a DB column.
-        StringBuilder whereClause = new StringBuilder(" WHERE (1=1)");
-        buildLibraryFilter(whereClause, accessibleLibraryIds, libraryId);
-        buildSearchFilter(whereClause, search);
 
-        String jpql = "SELECT DISTINCT a FROM AuthorEntity a LEFT JOIN a.bookMetadataEntityList bm LEFT JOIN bm.book b"
-                + whereClause;
-        TypedQuery<AuthorEntity> query = entityManager.createQuery(jpql, AuthorEntity.class);
-        setQueryParams(query, accessibleLibraryIds, libraryId, search);
+    private Specification<AuthorEntity> buildSpecification(Set<Long> accessibleLibraryIds, Long libraryId, String search, Boolean hasPhoto) {
+        Collection<Long> effectiveLibraryIds = libraryId != null ? List.of(libraryId) : accessibleLibraryIds;
+        Specification<AuthorEntity> spec = AppAuthorSpecification.visibleTo(effectiveLibraryIds);
 
-        return query.getResultList().stream()
-                .filter(a -> Files.exists(Paths.get(fileService.getAuthorThumbnailFile(a.getId()))) == hasPhoto)
-                .count();
-    }
-
-    private void buildLibraryFilter(StringBuilder whereClause, Set<Long> accessibleLibraryIds, Long libraryId) {
-        if (libraryId != null) {
-            whereClause.append(" AND b.library.id = :libraryId");
-        } else if (accessibleLibraryIds != null) {
-            whereClause.append(" AND b.library.id IN :libraryIds");
+        if (libraryId == null && accessibleLibraryIds != null && accessibleLibraryIds.isEmpty()) {
+            // Non-admin user with no library access: force empty result.
+            spec = spec.and((root, query, cb) -> cb.disjunction());
         }
-        whereClause.append(" AND (b.deleted IS NULL OR b.deleted = false)");
-        whereClause.append(" AND b.bookFiles IS NOT EMPTY");
-    }
 
-    private void buildSearchFilter(StringBuilder whereClause, String search) {
-        if (search != null && !search.trim().isEmpty()) {
-            whereClause.append(" AND LOWER(a.name) LIKE :search");
+        if (search != null && !search.isBlank()) {
+            spec = spec.and(AppAuthorSpecification.searchText(search));
         }
-    }
 
-    private String buildOrderClause(String sortBy, String sortDir) {
-        String direction = "asc".equalsIgnoreCase(sortDir) ? "ASC" : "DESC";
-        String field = switch (sortBy != null ? sortBy.toLowerCase() : "") {
-            case "name" -> "a.name";
-            case "bookcount", "book_count" -> "COUNT(DISTINCT bm.id)";
-            case "recent", "id" -> "a.id";
-            default -> "a.name";
-        };
-        return " ORDER BY " + field + " " + direction;
-    }
+        if (hasPhoto != null) {
+            spec = spec.and(AppAuthorSpecification.hasPhoto(hasPhoto));
+        }
 
-    private void setQueryParams(TypedQuery<?> query, Set<Long> accessibleLibraryIds, Long libraryId, String search) {
-        if (libraryId != null) {
-            query.setParameter("libraryId", libraryId);
-        } else if (accessibleLibraryIds != null) {
-            query.setParameter("libraryIds", accessibleLibraryIds);
-        }
-        if (search != null && !search.trim().isEmpty()) {
-            query.setParameter("search", "%" + search.trim().toLowerCase() + "%");
-        }
+        return spec;
     }
 
     private Set<Long> getAccessibleLibraryIds(BookLoreUser user) {
